--- a/Finance.Api/Finance.Api.csproj
+++ b/Finance.Api/Finance.Api.csproj
@@ -3,6 +3,15 @@
   <ItemGroup>
     <ProjectReference Include="..\Finance.Core\Finance.Core.csproj" />
   </ItemGroup>
+	
+<ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.6" />
+  </ItemGroup>
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
